--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,12 @@ fetch('https://jsonplaceholder.typicode.com/posts', {
         <p>© 2025 WebAPI Working Group. All Rights Reserved.</p>
         <p>This is a Living Standard. Participation in the development of this standard is welcome.</p>
         <p><a href="https://ngiotsas.github.io/webapihtml/">https://ngiotsas.github.io/webapihtml/</a></p>
+        
+        <div style="margin-top: 1rem;">
+            <printfriendly-options style="display:none;" data-content-features="disableClickToDel=0;hideImages=0;imageDisplayStyle=block;disablePDF=0;disableEmail=0;disablePrint=0;encodeImages=0;showHiddenContent=0;"></printfriendly-options>
+            <script>var pfBtVersion='3';(function(){var js,pf;pf=document.createElement('script');pf.type='text/javascript';pf.src='//cdn.printfriendly.com/printfriendly.js';document.getElementsByTagName('head')[0].appendChild(pf);})();</script>
+            <a href="https://www.printfriendly.com" style="color:#6D9F00;text-decoration:none;" class="printfriendly" onclick="window.print();return false;" title="Printer Friendly and PDF"><img style="border:none;-webkit-box-shadow:none;box-shadow:none;" src="//cdn.printfriendly.com/buttons/new/fulltext-energy-blue.svg" alt="Print Friendly and PDF"/></a>
+        </div>
     </footer>
     
     <script>
